--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
+<!DOCTYPE html>
 <html>
     <head>
     </head>
     <body>
-     <ul>
-       <li>
-          <button id="1" onclick="getClickID()">1</button>
-        </li>
-        <li>
-          <button id="2" onclick="getClickID()">2</button>
-        </li>
-        <li>
-          <button id="3" onclick="getClickID()">3</button>
-        </li>
-     </ul>
-     <p>The current winning value is: <span id="winner"></span></p>
+        <div id="container">
+           <div class="btn">
+              <button id="1" onclick="getClickID()">1</button>
+            </div>
+            <div  class="btn">
+              <button id="2" onclick="getClickID()">2</button>
+            </div>
+            <div  class="btn">
+              <button id="3" onclick="getClickID()">3</button>
+            </div>
+        </div>
+        <p>The current winning value is: <span id="winner"></span></p>
     </body>
 </html>
